Test/test_yh/TestWebsocket/TestK8sWS/k8s/chat-deployment.yml
apiVersion: apps/v1
 
kind: Deployment

metadata:
  name: chat-service
  labels:
    app: chat-service

spec:

  selector:
    matchLabels:
      app: chat-service

  replicas: 2

  template:
    
    metadata:
      labels:
        app: chat-service

    spec:
      containers:
        - name: chat-service
          image: lujol/test-socketio:1.0.6

          ports:
            - containerPort: 3012
