Test/test_yh/TestWebsocket/TestK8sWS/k8s/chat-service.yml
apiVersion: v1

kind: Service

metadata:
  name: chat-service

spec:

  selector:
    app: chat-service

  ports:
  - port: 3012
    targetPort: 3012
