Test/test_yh/TestWebsocket/TestK8sWS/k8s/chat-ws-service.yml
apiVersion: v1

kind: Service

metadata:
  name: chat-ws-service

spec:

  selector:
    app: chat-ws-service

  ports:
  - port: 3013
    targetPort: 3013
