Test/test_yh/TestWebsocket/TestK8sWS/k8s/dotnet-ws2-deployment.yml
apiVersion: apps/v1
 
kind: Deployment

metadata:
  name: dotnet-ws2-service
  labels:
    app: dotnet-ws2-service

spec:

  selector:
    matchLabels:
      app: dotnet-ws2-service

  replicas: 2

  template:
    
    metadata:
      labels:
        app: dotnet-ws2-service

    spec:
      containers:
        - name: dotnet-ws2-service
          image: lujol/test_dn_ws2:1.0.2

          ports:
            - containerPort: 8080
