Test/test_yh/TestWebsocket/TestK8sWS/k8s/dotnet-ws2-service.yml
apiVersion: v1

kind: Service

metadata:
  name: dotnet-ws2-service

spec:

  selector:
    app: dotnet-ws2-service

  ports:
  - port: 8080
    targetPort: 8080
