Test/test_yh/TestWebsocket/TestK8sWS/k8s/envoyConfigmap.yml
# 1-envoy-configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-config
  namespace: default
data:
  envoy.yaml: |
    admin:
      access_log_path: /dev/null
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 9901

    static_resources:
      listeners:
      - name: listener_0
        address:
          socket_address: { address: 0.0.0.0, port_value: 8080 }
        
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http

              # !! 웹소켓 업그레이드 허용
              upgrade_configs:
                - upgrade_type: "websocket"

              # 로그
              access_log:
                - name: envoy.access_loggers.stdout
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog

              route_config:
                name: local_route
                virtual_hosts:

                # 어떤 도메인/IP로 들어오든 다 받음
                - name: all_services_host
                  domains: ["*"]  

                  # !! 테스트용!! 헤더 강제 주입!!
                  request_headers_to_add:
                    - header:
                        key: "x-user-idx"
                        value: "1"
                    - header:
                        key: "x-user-role"
                        value: "USER"

                  typed_per_filter_config:

                    # CORS 정책 (Front 연동)
                    envoy.filters.http.cors:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.CorsPolicy
                      allow_origin_string_match:
                        - safe_regex:
                            google_re2: {}
                            regex: ".*"  # 로컬 테스트용 (모든 도메인 허용)
                      allow_methods: "GET, PUT, DELETE, POST, OPTIONS"
                      allow_headers: "content-type,authorization"
                      allow_credentials: true
                      max_age: "1728000"


                  routes:

                  # !! 채팅서버 임시 추가!!!
                  - match: { prefix: "/socket.io" }
                    route: 
                      cluster: chat_cluster
                      # 🔥 [초임계 중요] Envoy 기본 타임아웃 15초 해제. 이거 안 하면 15초마다 방에서 튕깁니다!
                      timeout: 0s 
                      idle_timeout: 0s

                  - match: { prefix: "/chat" }
                    route: 
                      cluster: chat_ws_cluster
                      # 🔥 [초임계 중요] Envoy 기본 타임아웃 15초 해제. 이거 안 하면 15초마다 방에서 튕깁니다!
                      timeout: 0s 
                      idle_timeout: 0s

                  - match: { prefix: "/dotnet/" }
                    route: 
                      cluster: dotnet_cluster
                      prefix_rewrite: "/"
                      # 💡 중요: 프론트가 /spring/websocket-test.html 로 요청하면,
                      # Spring Boot에게는 /websocket-test.html 로 전달되도록 /spring 을 떼어냅니다.

                      timeout: 0s 
                      idle_timeout: 0s
                  
                  - match: { prefix: "/dotnet2/" }
                    route: 
                      cluster: dotnet2_cluster
                      prefix_rewrite: "/"
                      # 💡 중요: 프론트가 /spring/websocket-test.html 로 요청하면,
                      # Spring Boot에게는 /websocket-test.html 로 전달되도록 /spring 을 떼어냅니다.

                      timeout: 0s 
                      idle_timeout: 0s

                  - match: { prefix: "/" }
                    route: 
                      cluster: spring_cluster
                      # 💡 중요: 프론트가 /spring/websocket-test.html 로 요청하면,
                      # Spring Boot에게는 /websocket-test.html 로 전달되도록 /spring 을 떼어냅니다.

                      timeout: 0s 
                      idle_timeout: 0s


                  # 인증(Auth) 서버 - REST API
                  - match: { prefix: "/auth" }
                    route: { cluster: auth_cluster }
                    typed_per_filter_config:
                      envoy.filters.http.ext_authz:
                        "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                        disabled: true

                  # gRPC 내부 패키지명 라우팅
                  - match: { prefix: "/gachi.machugi.grpc.user.UserService" }
                    route: { cluster: user_cluster }
                  - match: { prefix: "/gachi.machugi.grpc.quiz.QuizService" }
                    route: { cluster: quiz_cluster }
                  - match: { prefix: "/gachi.machugi.grpc.room.RoomService" }
                    route: { cluster: room_cluster }
                  - match: { prefix: "/gachi.machugi.grpc.board.BoardService" }
                    route: { cluster: board_cluster }

                  # 그 외 경로 매칭
                  - match: { prefix: "/" }
                    direct_response:
                      status: 404
                      body: { inline_string: "{\"status\": 404, \"message\": \"존재하지 않는 API 입니다.\"}" }


              http_filters:
              # CORS 필터
              - name: envoy.filters.http.cors
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors

              # !!! 임시 제거!!!
              # # 인증(Auth) 필터
              # - name: envoy.filters.http.ext_authz
              #   typed_config:
              #     "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
              #     failure_mode_allow: false
                  
              #     http_service:
              #       server_uri:
              #         uri: http://auth_cluster
              #         cluster: auth_cluster
              #         timeout: 0.5s

              #       # 프론트엔드 -> Envoy -> 인증 서버
              #       authorization_request:
              #         allowed_headers:
              #           patterns:
              #           - exact: "cookie"
              #           - exact: "authorization"

              #       # 인증 서버 -> Envoy -> 프론트엔드
              #       authorization_response:
              #         allowed_upstream_headers:
              #           patterns:
              #           - exact: "set-cookie"
              #           - exact: "x-user-id"
              #           - exact: "x-user-role"
              #         allowed_client_headers:
              #           patterns:
              #           - exact: "set-cookie"

              # # REST -> gRPC 변환 필터
              # - name: envoy.filters.http.grpc_json_transcoder
              #   typed_config:
              #     "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_json_transcoder.v3.GrpcJsonTranscoder
              #     proto_descriptor: "/tmp/descriptor.pb"
              #     services: 
              #       - "gachi.machugi.grpc.user.UserService"
              #       - "gachi.machugi.grpc.quiz.QuizService"
              #       - "gachi.machugi.grpc.room.RoomService"
              #       - "gachi.machugi.grpc.board.BoardService"
              #     print_options:
              #       add_whitespace: true
              #       always_print_primitive_fields: true

              # 라우팅 필터
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router


      clusters:
      - name: chat_cluster
        connect_timeout: 0.25s
        type: LOGICAL_DNS
        # 🔥 주의: gRPC가 아니므로 http2_protocol_options: {} 를 절대 넣으면 안 됩니다! (HTTP/1.1 업그레이드 사용)
        load_assignment:
          cluster_name: chat_cluster
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  # 실제 채팅 서비스가 떠있는 주소와 포트 번호 (예: 9095)를 입력하세요.
                  socket_address: { address: chat-service, port_value: 3012 }
      - name: chat_ws_cluster
        connect_timeout: 0.25s
        type: LOGICAL_DNS
        # 🔥 주의: gRPC가 아니므로 http2_protocol_options: {} 를 절대 넣으면 안 됩니다! (HTTP/1.1 업그레이드 사용)
        load_assignment:
          cluster_name: chat_ws_cluster
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  # 실제 채팅 서비스가 떠있는 주소와 포트 번호 (예: 9095)를 입력하세요.
                  socket_address: { address: chat-ws-service, port_value: 3013 }
      - name: dotnet_cluster
        connect_timeout: 5s
        type: LOGICAL_DNS
        load_assignment:
          cluster_name: dotnet_cluster
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  # 💡 Spring 서비스를 가리키는 K8s Service 이름과 포트
                  socket_address: { address: dotnet-ws-service, port_value: 8080 }
      - name: dotnet2_cluster
        connect_timeout: 5s
        type: LOGICAL_DNS
        load_assignment:
          cluster_name: dotnet2_cluster
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  # 💡 Spring 서비스를 가리키는 K8s Service 이름과 포트
                  socket_address: { address: dotnet-ws2-service, port_value: 8080 }
      - name: spring_cluster
        connect_timeout: 5s
        type: LOGICAL_DNS
        load_assignment:
          cluster_name: spring_cluster
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  # 💡 Spring 서비스를 가리키는 K8s Service 이름과 포트
                  socket_address: { address: spring-ws-service, port_value: 8080 }

      # 인증(Auth) 클러스터
      - name: auth_cluster
        connect_timeout: 0.25s
        type: LOGICAL_DNS
        load_assignment:
          cluster_name: auth_cluster
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address: { address: host.docker.internal, port_value: 8081 }

      # 유저(User) 클러스터
      - name: user_cluster
        connect_timeout: 0.25s 
        type: LOGICAL_DNS
        http2_protocol_options: {} 
        load_assignment:
          cluster_name: user_cluster
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address: { address: host.docker.internal, port_value: 9091 }

      # 퀴즈(Quiz) 클러스터
      - name: quiz_cluster
        connect_timeout: 0.25s
        type: LOGICAL_DNS
        http2_protocol_options: {}
        load_assignment:
          cluster_name: quiz_cluster
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address: { address: host.docker.internal, port_value: 9092 }

      # 방(Room) 클러스터
      - name: room_cluster
        connect_timeout: 0.25s
        type: LOGICAL_DNS
        http2_protocol_options: {}
        load_assignment:
          cluster_name: room_cluster
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address: { address: host.docker.internal, port_value: 9093 }

      # 게시판(Board) 클러스터
      - name: board_cluster
        connect_timeout: 0.25s
        type: LOGICAL_DNS
        http2_protocol_options: {}
        load_assignment:
          cluster_name: board_cluster
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address: { address: host.docker.internal, port_value: 9094 }
