Test/test_yh/TestWebsocket/TestK8sWS/k8s/spring-ws-service.yml
apiVersion: v1

kind: Service

metadata:
  name: spring-ws-service

spec:

  selector:
    app: spring-ws-service

  ports:
  - port: 8080
    targetPort: 8080
